<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/start"
        android:icon="@android:drawable/ic_media_play"
        android:showAsAction="always"
        android:title="@string/start_label"/>
    <item
        android:id="@+id/pause"
        android:icon="@android:drawable/ic_media_pause"
        android:showAsAction="always"
        android:title="@string/pause_label"/>
    <item
        android:id="@+id/undo"
        android:icon="@android:drawable/ic_media_rew"
        android:showAsAction="ifRoom"
        android:title="@string/undo_label"/>
    <item
        android:id="@+id/single_step"
        android:icon="@android:drawable/ic_media_next"
        android:showAsAction="ifRoom"
        android:title="@string/single_step_label"/>
    <item
        android:id="@+id/file_menu"
        android:title="@string/file_label">
        <menu>
            <item
                android:id="@+id/load"
                android:title="@string/load_label"/>
<!--             <item -->
<!--                 android:id="@+id/save" -->
<!--                 android:title="@string/save_label"/> -->
        </menu>
    </item>
    <item
        android:id="@+id/control_mode"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/move_label">
        <menu>
            <group
                android:id="@+id/control_mode_group"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/move"
                    android:checked="true"
                    android:icon="@android:drawable/ic_menu_mylocation"
                    android:title="@string/move_label"/>
                <item
                    android:id="@+id/edit"
                    android:icon="@android:drawable/ic_menu_edit"
                    android:title="@string/edit_label"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="ifRoom"
        android:title="@string/clear_label"/>
    <item
        android:id="@+id/settings"
        android:alphabeticShortcut="@string/settings_shortcut"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_label"/>
    <item
        android:id="@+id/about"
        android:title="@string/about_label"/>

</menu>